# Cross-Chain_Bridge_Infrastructure

./: .gitignore  COMPLETE_SETUP_GUIDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  config.toml  demo.rs  docker-compose.yml  setup-github.ps1  setup-github.sh  verify_project.rs
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_report.md
.github/workflows/: ci.yml
api/: Cargo.toml
api/src/: error.rs  lib.rs  routes.rs  server.rs  websocket.rs
api/src/handlers/: blocks.rs  bridge.rs  events.rs  health.rs  metrics.rs  mod.rs  stats.rs  status.rs  tokens.rs  transactions.rs  validators.rs  websocket.rs
api/src/middleware/: auth.rs  mod.rs  request_id.rs
contracts/ethereum/: README.md  foundry.toml  package.json
contracts/ethereum/script/: Deploy.s.sol
contracts/ethereum/src/: CrossChainBridge.sol  TestToken.sol
contracts/ethereum/test/: CrossChainBridge.t.sol
contracts/substrate/: Cargo.toml  README.md
contracts/substrate/src/: lib.rs  mock.rs  tests.rs  weights.rs
docs/: API_REFERENCE.md  DEPLOYMENT_GUIDE.md  GITHUB_SETUP.md  PROJECT_STRUCTURE.md  SECURITY_AUDIT.md  TESTING_REPORT.md  architecture.md
relayer/: Cargo.toml
relayer/src/: config.rs  coordinator.rs  database.rs  error.rs  ethereum.rs  event_monitor.rs  lib.rs  polkadot.rs  signature_coordinator.rs
tests/: Cargo.toml
tests/src/: api_tests.rs  bridge_tests.rs  ethereum_tests.rs  lib.rs  polkadot_tests.rs  threshold_tests.rs
tests/src/common/: assertions.rs  mock_data.rs  mod.rs  setup.rs
threshold/: Cargo.toml
threshold/src/: ecdsa.rs  error.rs  lib.rs  schnorr.rs  simple.rs  types.rs  utils.rs
