[package]
name = "threshold"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Cryptography
k256 = { version = "0.13", features = ["ecdsa", "schnorr", "arithmetic"] }
signature = "2.0"
sha2 = "0.10"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = "0.1"

# Logging
tracing = { workspace = true }

# Utilities
hex = "0.4"
zeroize = { version = "1.6", features = ["zeroize_derive"] }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.0"

[features]
default = ["schnorr"]
schnorr = []
ecdsa = []
