[package]
name = "pallet-cross-chain-bridge"
version = "0.1.0"
edition = "2021"
authors = ["Cross-Chain Bridge Team"]
license = "MIT"
description = "Substrate pallet for cross-chain bridge with Ethereum"

[dependencies]
# Substrate dependencies
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }

# Substrate primitives
sp-std = { version = "8.0.0", default-features = false }
sp-runtime = { version = "24.0.0", default-features = false }
sp-core = { version = "21.0.0", default-features = false }
sp-io = { version = "23.0.0", default-features = false }

# Substrate frame
frame-support = { version = "22.0.0", default-features = false }
frame-system = { version = "22.0.0", default-features = false }
frame-benchmarking = { version = "22.0.0", default-features = false, optional = true }

# Substrate pallets
pallet-balances = { version = "22.0.0", default-features = false }
pallet-assets = { version = "23.0.0", default-features = false }

# Cryptography
sp-application-crypto = { version = "23.0.0", default-features = false }

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
sp-core = { version = "21.0.0" }
sp-io = { version = "23.0.0" }
sp-runtime = { version = "24.0.0" }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-std/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-io/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking?/std",
    "pallet-balances/std",
    "pallet-assets/std",
    "sp-application-crypto/std",
    "serde",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]
